--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/styles.css">
+<link rel="stylesheet" href="/css/styles.css">
   <title>Home</title>
 </head>
 
@@ -38,7 +38,7 @@
     <h1>Finders Keepers</h1>
   </div>
 
-  <div id="carouselExampleIndicators" class="carousel slide nft-imgs" data-ride="carousel">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -46,13 +46,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100 nft-img" src="/images/monks.png" alt="First slide">
+      <img class="d-block w-100" src="/images/steezmonk.png" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100 nft-img" src="/images/punks.jpeg" alt="Second slide">
+      <img class="d-block w-100 nft-img" src="/images/golfwayng.jpeg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100 nft-img" src="/images/pengs.jpg" alt="Third slide">
+      <img class="d-block w-100 nft-img" src="/images/preme-court.jpeg" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
