--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/fkstyles.css">
   <title>Home</title>
 </head>
 
@@ -22,47 +22,76 @@
           <a class="nav-link" href="/index.html">Home </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about.html">Marketplace </a>
+          <a class="nav-link" href="/marketplace.html">Marketplace </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/portfolio.html">My Profile </a>
+          <a class="nav-link" href="/profile.html">My Profile </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/reviews.html">Testimonials </a>
+          <a class="nav-link" href="/testimonials.html">Testimonials </a>
         </li>
       </ul>
     </div>
   </nav>
 
-  <div>
-    <h1>Finders Keepers</h1>
+  <div class="container home-container">
+    <div class="row">
+      <div class="col carousel-container">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="/images/steezmonk.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 nft-img" src="/images/golfwayng.jpeg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 nft-img" src="/images/preme-court.jpeg" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="heading-container">
+          <div class="title">
+            <h1>Finders Keepers</h1>
+          </div>
+          <div class="subtitle">
+            <h5>We find. You keep.</h5>
+          </div>
+          <div class="cta-container">
+            <h5>Let us start shopping for you today!</h5>
+            <button type="button" class="btn btn-primary">Get Started</button>
+          </div>
+
+
+
+        </div>
+      </div>
+    </div>
+
   </div>
 
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="/images/steezmonk.png" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100 nft-img" src="/images/golfwayng.jpeg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100 nft-img" src="/images/preme-court.jpeg" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+<div class="socials">
+
+
+  <a href="#"><img class="social-icon" src="/images/5296765_camera_instagram_instagram logo_icon.png" alt="insta-logo"></a>
+  <a href="https://github.com/carshall/finderskeepers"><img class="social-icon" src="/images/291716_github_logo_social network_social_icon.png" alt="github-cat"></a>
+
 </div>
 
 
@@ -73,9 +102,6 @@
 
 </body>
 
-<footer>
-  <a href="#"><img class="social-icon" src="/images/5296765_camera_instagram_instagram logo_icon.png" alt="insta-logo"></a>
-  <a href="https://github.com/BYUCS260/lab-1-photography-website-carshall"><img class="social-icon" src="/images/291716_github_logo_social network_social_icon.png" alt="github-cat"></a>
-</footer>
+
 
 </html>
