--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="/images/steezmonk.png" alt="First slide">
+              <img class="d-block w-100" src="/images/carousel-1.jpeg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100 nft-img" src="/images/golfwayng.jpeg" alt="Second slide">
+              <img class="d-block w-100 nft-img" src="/images/carousel-2.jpeg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100 nft-img" src="/images/preme-court.jpeg" alt="Third slide">
+              <img class="d-block w-100 nft-img" src="/images/carousel-3.jpeg" alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -89,8 +89,7 @@
 <div class="socials">
 
 
-  <a href="#"><img class="social-icon" src="/images/5296765_camera_instagram_instagram logo_icon.png" alt="insta-logo"></a>
-  <a href="https://github.com/carshall/finderskeepers"><img class="social-icon" src="/images/291716_github_logo_social network_social_icon.png" alt="github-cat"></a>
+
 
 </div>
 
@@ -101,7 +100,10 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 </body>
-
+<footer>
+  <a href="#"><img class="social-icon" src="/images/5296765_camera_instagram_instagram logo_icon.png" alt="insta-logo"></a>
+  <a href="https://github.com/carshall/finderskeepers"><img class="social-icon" src="/images/291716_github_logo_social network_social_icon.png" alt="github-cat"></a>
+</footer>
 
 
 </html>
