--- a/testimonials.html
+++ b/testimonials.html
@@ -32,8 +32,48 @@
       </div>
     </nav>
 
+    <div class="container">
+      <div class="row test-container">
+        <div class="col">
+          <img class="test-img" src="/images/test-1.png" alt="profilepic">
+        </div>
+
+        <div class="col test-text">
+          <p>"Finders Keepers took the pain out of shopping. I simply told them what I wanted and they found great options in a timely manner.
+            Definitely going to them to stay fitted"</p>
+        </div>
+      </div>
+
+    </div>
+    <div class="container">
+      <div class="row test-container">
+        <div class="col test-text">
+          <p>"Shopping for clothes that I like within my budget has always been so hard for me. Finders Keepers made it such a seamless expdrience."</p>
+        </div>
+        <div class="col">
+          <img class="test-img" src="/images/test-2.jpeg" alt="profilepic">
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row test-container">
+        <div class="col">
+          <img class="test-img" src="/images/test-3.jpeg" alt="profilepic">
+        </div>
+
+        <div class="col test-text">
+          <p>"Going to all the thrift stores in my area on a saturday has always been a chore, but now Finders Keepers does the searching for me.
+             I can finally fit in at local social functions!"</p>
+        </div>
+      </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
+  <footer>
+    <a href="#"><img class="social-icon" src="/images/5296765_camera_instagram_instagram logo_icon.png" alt="insta-logo"></a>
+    <a href="https://github.com/carshall/finderskeepers"><img class="social-icon" src="/images/291716_github_logo_social network_social_icon.png" alt="github-cat"></a>
+  </footer>
 </html>
