--- a/marketplace.html
+++ b/marketplace.html
@@ -125,5 +125,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
+<footer>
+  <a href="#"><img class="social-icon" src="/images/5296765_camera_instagram_instagram logo_icon.png" alt="insta-logo"></a>
+  <a href="https://github.com/carshall/finderskeepers"><img class="social-icon" src="/images/291716_github_logo_social network_social_icon.png" alt="github-cat"></a>
+</footer>
 
 </html>
